--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 #Local
-spring.datasource.url= jdbc:mysql://localhost:3306/portfolioDB?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
+#spring.datasource.url= jdbc:mysql://localhost:3306/portfolioDB?useSSL=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=
 
 #Produccion
 
 spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url= jdbc:mysql://ugzlusqnqyvt9df3:FiC3OrGyAt9XM7TMyzWH@bu3iyuo7vdrkce53rxfa-mysql.services.clever-cloud.com:3306/bu3iyuo7vdrkce53rxfa
-#spring.datasource.username=bu3iyuo7vdrkce53rxfa
-#spring.datasource.password=FiC3OrGyAt9XM7TMyzWH
+spring.datasource.url= jdbc:mysql://ugzlusqnqyvt9df3:FiC3OrGyAt9XM7TMyzWH@bu3iyuo7vdrkce53rxfa-mysql.services.clever-cloud.com:3306/bu3iyuo7vdrkce53rxfa
+spring.datasource.username=bu3iyuo7vdrkce53rxfa
+spring.datasource.password=FiC3OrGyAt9XM7TMyzWH
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
